Fix logo spacing

--- a/Dashboard/src/components/main-nav/main-nav.module.scss
+++ b/Dashboard/src/components/main-nav/main-nav.module.scss
@@ -32,7 +32,7 @@
 
 .logo {
   width: 100%;
-  padding: 1.5rem .6rem 1rem 1.5rem;
+  padding: 1.5rem 1.3rem 1rem 1.5rem;
 }
 
 .main-menu__footer {
